Clean main.go, remove doc basepath = /api
