# backend/main.go
@@ -3,66 +3,48 @@ package main
 import (
 	"log"
 	"os"
-	"time"
 	"os/signal"
 	"syscall"
+	"time"
 
 	priceRoutes "github.com/dath-241/coin-price-be-go/services/price-service/routes"
 	triggerRoutes "github.com/dath-241/coin-price-be-go/services/trigger-service/routes"
-	triggerServiceAlert "github.com/dath-241/coin-price-be-go/services/trigger-service/services/alert"
 	"github.com/gin-gonic/gin"
 
-	adminRoutes "github.com/dath-241/coin-price-be-go/services/admin_service/routes"
-	adminUtils "github.com/dath-241/coin-price-be-go/services/admin_service/utils"
+	_ "github.com/dath-241/coin-price-be-go/docs"
 	adminConfig "github.com/dath-241/coin-price-be-go/services/admin_service/config"
 	adminMomo "github.com/dath-241/coin-price-be-go/services/admin_service/momo"
-	"github.com/swaggo/gin-swagger"
-    "github.com/swaggo/files"
-	_ "github.com/dath-241/coin-price-be-go/docs"
+	adminRoutes "github.com/dath-241/coin-price-be-go/services/admin_service/routes"
+	adminUtils "github.com/dath-241/coin-price-be-go/services/admin_service/utils"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 
 	"github.com/joho/godotenv"
 )
 
-
-
 // @title Coin-Price
-// @version 1.0 
-// @description This is a sample server. 
-// @termsOfService http://swagger.io/terms/ 
-// @contact.name API Support 
-// @contact.url http://www.swagger.io/support 
-// @contact.email support@swagger.io 
-// @license.name Apache 2.0 
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html 
+// @version 1.0
+// @description This is a sample server.
+// @termsOfService http://swagger.io/terms/
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 // @host localhost:8080
 func main() {
 	server := gin.Default()
 
-	log.Print("Price routes------------------------")
-	priceRoutes.RegisterRoutes(server)
-
-	log.Print("Trigger routes------------------------")
 	// Tải biến môi trường từ tệp .env
 	if err := godotenv.Load(); err != nil {
 		log.Fatal("Error loading .env file")
 	}
-	log.Println("Starting server...")
-	interval, err := triggerServiceAlert.GetFundingRateInterval("BTCUSDT")
-	if err != nil {
-		log.Fatal(err)
-	}
-	log.Printf("Funding rate interval for BTCUSDT: %s", interval)
-	// if err := triggerUtils.ConnectMongoDB("mongodb://localhost:27017"); err != nil {
-	// 	log.Fatal(err.Error())
-	// }
+	log.Print("Price routes------------------------")
+	priceRoutes.RegisterRoutes(server)
 
+	log.Print("Trigger routes------------------------")
 	triggerRoutes.SetupRoute(server)
-	// triggerR.Run(":3000")
-	// Nạp file .env vào môi trường
-	err = godotenv.Load()
-	if err != nil {
-		log.Fatalf("Error loading .env file: %v", err)
-	}
+
 	log.Print("Admin routes------------------------")
 	// Kết nối MongoDB với retry
 	maxRetries := 3
@@ -75,14 +57,12 @@ func main() {
 
 	// Bắt đầu routine dọn dẹp token hết hạn
 	adminUtils.StartCleanupRoutine(1 * time.Minute)
-	server.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	adminRoutes.SetupRouter(server)
-
 	// Gọi hàm init trong package momo để khởi tạo các giá trị cần thiết
-
 	adminMomo.Init()
 	//r.GET("/blacklisted-tokens", utils.ListBlacklistedTokens)
 
+	server.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	server.Run(":8080")
 	// Bắt tín hiệu tắt server để thực hiện cleanup
 	quit := make(chan os.Signal, 1)
@@ -91,25 +71,5 @@ func main() {
 	log.Println("Shutting down server...")
 
 	log.Println("Server gracefully stopped.")
-	// // Chạy server trong một goroutine riêng
-	// go func() {
-	// 	log.Println("Server is running...")
-	// 	if err := adminR.Run(":8082"); err != nil {
-	// 		log.Printf("Server exited: %v", err)
-	// 	}
-	// }()
-
-	// Chờ tín hiệu tắt từ hệ thống
-
-	// go func() {
-	//     <-quit
-	//     log.Println("Shutting down server...")
-	//     os.Exit(0)
-	// }()
-
-	// // Chạy server tại cổng 8082
-	// if err := r.Run(":8082"); err != nil {
-	//     log.Fatalf("Server encountered an error: %v", err)
-	// }
 
 }
